deploy/metrics-server/metrics-server-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: metrics-server
  namespace: metrics-server
  labels:
    k8s-app: metrics-server
spec:
  selector:
    matchLabels:
      k8s-app: metrics-server
  template:
    metadata:
      name: metrics-server
      labels:
        k8s-app: metrics-server
    spec:
      serviceAccountName: metrics-server
      volumes:
      # mount in tmp so we can safely use from-scratch images and/or read-only containers
      - name: tmp-dir
        emptyDir: {}
      containers:
      - name: metrics-server
        image: k8s.gcr.io/metrics-server-amd64:v0.3.3
        imagePullPolicy: Always
        securityContext:
          runAsUser: 1000
        workingDir: /tmp
        command: 
          - /metrics-server
          - --kubelet-insecure-tls
          - --cert-dir="/var/run/kubernetes"
          - --kubelet-preferred-address-types=InternalIP
          - --secure-port=8443
        volumeMounts:
        - name: tmp-dir
          mountPath: /tmp
